--- a/TrendnetStalker/templates/index.html
+++ b/TrendnetStalker/templates/index.html
@@ -58,7 +58,7 @@
 </head>
 <body>
     <h1>Trendnet Stalker</h1>
-    Beta version!
+    Total cameras: {{ cameras.count() }}
     <div id="map_canvas"></div>
     <script type="text/javascript">
         initialize();
