change map center coordinates

--- a/TrendnetStalker/templates/index.html
+++ b/TrendnetStalker/templates/index.html
@@ -45,7 +45,7 @@
     function initialize() {
         var mapOptions = {
             zoom: 3,
-            center: new google.maps.LatLng(0,0),
+            center: new google.maps.LatLng(20.0, 0.0),
             mapTypeId: google.maps.MapTypeId.ROADMAP
         };
         map = new google.maps.Map(document.getElementById('map_canvas'), mapOptions);
